2010-04-15  Juri Linkov  <juri@jurta.org>

	* simple.el (scroll-up-command, scroll-down-command)
	(scroll-up-line, scroll-down-line): Put `scroll-command'
	property on the these symbols.  Remove them from
	`scroll-preserve-screen-position-commands'.

	* mwheel.el (mwheel-scroll): Put `scroll-command' and
	`isearch-scroll' properties on the `mwheel-scroll' symbol.
	Remove it from `scroll-preserve-screen-position-commands'.

	* isearch.el (isearch-allow-scroll): Doc fix.

2010-04-15  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-error-with-buffer): Don't show the
	connection buffer when we are in completion mode.
	(tramp-file-name-handler): Catch the error for some operations
	when we are in completion mode.  This gives the user the chance to
	correct the file name in the minibuffer.

2010-04-15  Glenn Morris  <rgm@gnu.org>

	* progmodes/verilog-mode.el (verilog-forward-sexp): Avoid free variable.

2010-04-15  Juanma Barranquero  <lekktu@gmail.com>

	Simplify by using `define-derived-mode'.
	* info.el (Info-mode):
	* calendar/todo-mode.el (todo-mode):
	* play/gomoku.el (gomoku-mode): Define with `define-derived-mode'.
	(gomoku-mode-map): Move initialization into declaration.

2010-04-14  Michael Albinus  <michael.albinus@gmx.de>

	Fix Bug#5840.
	* ido.el (ido-file-name-all-completions-1):
	* minibuffer.el (minibuffer-completion-help):
	* net/tramp.el (tramp-completion-mode-p): Use `non-essential'.

2010-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (non-essential): New var.

	Add a new field `location' to bookmarks for non-file bookmarks.
	* bookmark.el (bookmark-location): Use the new field, if present.
	(bookmark-insert-location): Undo last change, not needed any more.
	* man.el (Man-bookmark-make-record):
	* woman.el (woman-bookmark-make-record): Add `location' field.

2010-04-14  Juri Linkov  <juri@jurta.org>

	* simple.el (scroll-error-top-bottom): New defcustom.
	(scroll-up-command, scroll-down-command): Use it.  Doc fix.
